# SimpleHTR

./: .gitignore  Group_members.txt  ISSUE_TEMPLATE.md  LICENSE  LICENSE.md  README.MD  README.md  dataloader_iam.py  detect.py  key.json  main.py  model.py  preprocessor.py  requirements.txt  streamline.py
data/: checkDirs.py  corpus.txt  pixelRelevance.npy  translationInvariance.npy  translationInvarianceTexts.pickle
model/: .gitignore  accuracy.txt  checkpoint  snapshot-13.index  snapshot-32.index  summary.json  wordCharList.txt
model/model_train/: snapshot-10.index  snapshot-17.index  snapshot-20.index  snapshot-24.index  snapshot-5.index  snapshot-6.index  snapshot-7.index
src/: DataLoader.py  DataLoaderIAM.py  Model.py  SamplePreprocessor.py  analyze.py  app.py  createLMDB.py  dataloader_iam.py  helpers.py  main.py  model.py  preprocess.py  preprocessor.py  programa.py
website/: .replit  main.py  pyproject.toml  replit.nix  replit_zip_error_log.txt
website/.cache/replit/: __replit_disk_meta.json
website/.cache/replit/nix/: env.json
website/.upm/: store.json
website/static/css/: styles.css
website/static/js/: scripts.js
website/templates/: index.html
